openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-demo
  template:
    metadata:
      labels:
        app: nodejs-demo
    spec:
      containers:
        - name: nodejs-demo
          image: <your-image-name> # e.g., image-registry.openshift-image-registry.svc:5000/myproject/nodejs-demo
          ports:
            - containerPort: 8080
