openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo
spec:
  selector:
    app: nodejs-demo
  ports:
    - port: 8080
      targetPort: 8080
